# blueberrypy

./: .gitignore  Pipfile  README.md  README.rst  pyproject.toml
docs/source/: conf.py  index.rst
etc/1.2.3/: __init__.py
etc/90210-v.6/: pyproject.toml
etc/90210-v.6/src/a90210/: __init__.py  mod_a.py  mod_b.py
etc/pack_a/: __init__.py  mod_b.py
etc/test_module/: __init__.py  hello.py  hello_with_import.py
src/blueberrypy/: cli.py  main.py  services.py
tests/: test_blueberrypy.py  test_importlib.py  test_importlib_dist.py  test_main.py  test_path_uri_handling.py
