[tool.poetry]
name = "blueberrypy"
version = "0.1.0"
description = ""
authors = ["pboisver <pboisver@umich.edu>"]

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.4.1"}
rdflib = "^6.2.0"
fastapi = {extras = ["all"], version = "^0.89.1"}

[tool.poetry.dev-dependencies]
pytest = "^7.1"
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"

[tool.poetry.scripts]
blueberrypy = "blueberrypy.cli:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# tooling running pytest will not resolve modules in `src`
testpaths = ["tests"]
pythonpath = ["src"]
